# verifiable-memory

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Solana.md
migrations/: 20251112103531_create_users_table.sql  20260122144429_migration_test_add_columns.sql
scripts/: clean_db.sh  docker_up.sh  start_api.sh  start_api_docker.sh  start_db.sh  start_simulation.sh  test_migration.sh  test_restart.sh
solana_program/: Anchor.toml
solana_program/programs/verifiable_db_program/: Cargo.toml
solana_program/programs/verifiable_db_program/src/: lib.rs
solana_program/tests/: verifiable_db_program.ts
src/: lib.rs  main.rs  performance_test.rs
src/app/: database_service.rs  mod.rs
src/crypto/: hashing.rs
src/domain/: mod.rs
src/domain/commitment/: mod.rs  root_manager.rs
src/domain/model/: dynamic.rs  examples.rs  mod.rs  registry.rs
src/domain/verify/: mod.rs  verifier.rs
src/infra/: config.rs  mod.rs
src/infra/solana/: client.rs  mod.rs
src/storage/: mod.rs
src/storage/smt/: mod.rs  postgres.rs  store.rs
src/transport/http/: mod.rs  router.rs  types.rs
src/transport/http/handlers/: bootstrap.rs  common.rs  execute.rs  health.rs  mod.rs  models.rs  schema.rs
tests/: test_restart_warm_start.rs  test_schema_update.rs
